Fixing responsive homepage issue, fixing issue with order summary appearing off screen at some resolutions. Amending the file upload size. Making the progress bar work.

--- a/public/src/scss/partials/pages/_home.scss
+++ b/public/src/scss/partials/pages/_home.scss
@@ -308,9 +308,11 @@
 				.lovedTogether {
 					background-size: 100%;
 					height: 270px;
+					background-image: none!important;
 					.innerContent {
 						width: 100%;
-						margin-top: 200px!important;
+						margin-top: 20px!important;
+						margin-bottom: 30px!important;
 						text-align: center;
 					}
 				}
